RSS generator component was extracted into its own package. Added artifact org.apache.commons:commons-text into local p2 repository.